--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
 			<button type="button" class="button" >Get Spell Data</button>
 		</div>
 
-		<div class="center">
-			<h2 id="spellName"></h2>
-			<h3 id="spellDesc"></h2>
-			<h3 id="spellDesc"></h2>
-		</div>
+		<h2 id="spellName"></h2>
+		<h3 id="spellDesc"></h3>
+		<h3 id="spellRange"></h3>
 
 		<div class="flex-container">
 			<section class="flex-child">
